Add logic TaskListService and change viewmodel

--- a/src/MyMvvmCrossApp1.UI/Pages/TaskListPage.xaml
+++ b/src/MyMvvmCrossApp1.UI/Pages/TaskListPage.xaml
@@ -10,9 +10,7 @@
     Title="Second form">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to TaskListPage!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <ListView ItemsSource="{Binding TaskNames}" />
         </StackLayout>
     </ContentPage.Content>
 </views:MvxContentPage>
