--- a/src/MyMvvmCrossApp1.UI/Pages/TaskListPage.xaml
+++ b/src/MyMvvmCrossApp1.UI/Pages/TaskListPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<views:MvxContentPage x:TypeArguments="viewModels:TaskListViewModel"
+<views:MvxContentPage
+    x:TypeArguments="viewModels:TaskListViewModel"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
     xmlns:mvx="clr-namespace:MvvmCross.Forms.Bindings;assembly=MvvmCross.Forms"
     xmlns:local="clr-namespace:MyMvvmCrossApp1.UI.Pages"
     x:Class="MyMvvmCrossApp1.UI.Pages.TaskListPage"
-    xmlns:viewModels="clr-namespace:MyMvvmCrossApp1.Core.ViewModels.Home;assembly=MyMvvmCrossApp1.Core" x:DataType="viewModels:TaskListViewModel"
+    xmlns:viewModels="clr-namespace:MyMvvmCrossApp1.Core.ViewModels.TaskList;assembly=MyMvvmCrossApp1.Core"
+    x:DataType="viewModels:TaskListViewModel"
     Title="Second form">
     <ContentPage.Content>
         <StackLayout>
